force-app/main/default/objects/Twilio_Whatsapp__c/Twilio_Whatsapp__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Twilio - Whatsapp</label>
</CustomObject>