force-app/main/default/objects/Twilio_Whatsapp__c/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <label>Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>