force-app/main/default/objects/Twilio_Whatsapp__c/fields/From_Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>From_Phone_Numbers__c</fullName>
    <description>One or more Twilio WhatsApp from phone numbers (one per line or comma-separated). Shown as dropdown in chat component when Twilio WhatsApp is active.</description>
    <label>From Phone Numbers</label>
    <type>TextArea</type>
</CustomField>