force-app/main/default/objects/Twilio_Whatsapp__c/fields/Twilio_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Phone_Number__c</fullName>
    <label>Twilio Phone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>